fix: correct style body misalignment

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ html {
 }
 
 body {
+  margin: 0 auto;
   position: relative;
   min-height: 100vh;
   padding: 1.2rem;
